# python-tut

./: pyproject.toml
Dictionaries/: birthday.py  ex1.py  likeyval.py
day1/: ex4.py
flowcontrol/: anwhile.py  brco.py  for.py  if.py  tf.py
functions/: another.py  ex1.py  notes  param.py
interview_prep/: 2darrays.py  basics.py  class.py  factorial.py  hashset.py  leap.py  lists.py  queues.py
lists/: 8balls.py  Reference.py  augmentedassign.py  basics.py  innotin.py  iterations.py  prac.py  remove.py  slices.py  takinginp.py  tuples.py
multithreading/: mutli.py
numpy/: copyview.py  numpy_basics.py  slicing_np.py  universal_functions.py
poetry/: if_else.py  why_poetry.py
python_basics/: python_encoding.py  trying_symb.py  variables.py
python_basics/Dictionaries/: ex1.py  getmethod.py
python_basics/day1/: datatypes.py  ex2.py  ex3.py  firstprog.py  practice.py
python_basics/flowcontrol/: elif.py  ran.py  while.py
python_basics/functions/: another.py  callstack.py  exh.py  locglo.py  param.py
python_basics/lists/: otherbasic.py  ran.py  tuples.py
python_basics/zigzag/: com.py 
space_time/: factorial.py  fibo.py
zigzag/: micah.py  print.py  zigzag.py
